# alert_framework

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  STRUCTURE.md  agents.md  alertframework.py  docker-compose.dev.yml  docker-compose.yml  formatting.go  formatting_test.go  go.mod  go.sum  main.go  nx.json  ops.go  ops_test.go  package-lock.json  package.json  rollup_handlers.go
.codex/: auth.json  config.toml  history.jsonl  version.json
.gocache/: trim.txt
backend/: README.md
backfill/: backfill.go  backfill_test.go
caad_skillkit/: __init__.py
config/: README.md  config.go  config.yaml  config_test.go  dotenv.go  nlp.go
contracts/: README.md  call_record.schema.json  metadata.schema.json  rollup.schema.json  transcription.schema.json
core/: README.md  store.py
docker/: README.md  entrypoint.sh
formatting/: call_category.go  formatting.go  formatting_test.go  geocoder.go  incident.go  incident_test.go  listen_url.go  location_parser.go  normalize.go
mcp_server/: __init__.py  client.py  server.py  test_client.py
metrics/: metrics.go
skills/caad_skillkit/: Dockerfile  README.md  pyproject.toml
skills/caad_skillkit/caad_skillkit/: cli.py  config.py  init.py
skills/caad_skillkit/caad_skillkit/ai/: clients.py  init.py  jsonio.py  rollups.py  schemas.py  transcribe.py
skills/caad_skillkit/caad_skillkit/api/: app.py  errors.py  health.py  init.py  middleware.py
skills/caad_skillkit/caad_skillkit/docs/: __init__.py  generator.py
skills/caad_skillkit/caad_skillkit/ops/: docker.py  env.py  init.py  smoke.py
(+1737 files in other folders)
